Add property to switch on async scan with default false

--- a/alfviral-platform/src/main/resources/alfresco/subsystems/Security/alfviral/alfviral.properties
+++ b/alfviral-platform/src/main/resources/alfresco/subsystems/Security/alfviral/alfviral.properties
@@ -26,6 +26,8 @@ alfviral.on_update=TRUE
 alfviral.on_read=FALSE
 # Delete node on content update if the content-file is infected
 alfviral.on_update.delete=false
+# Execute the scan action on content update asynchronously
+alfviral.on_update.asynchronously=false
 
 # Scheduled action
 alfviral.scheduled.pathQuery=/app:company_home/st:sites
