--- a/alfviral-platform/src/main/resources/alfresco/subsystems/Security/alfviral/alfviral.properties
+++ b/alfviral-platform/src/main/resources/alfresco/subsystems/Security/alfviral/alfviral.properties
@@ -40,6 +40,7 @@ alfviral.file.only_or_exceptions=exceptions
 # Options: Notify to user to upload file and notify to admin. Use email config in profile (people)
 alfviral.notify.user=false
 alfviral.notify.admin=false
+alfviral.notify.subject=Document infected
 alfviral.notify.user.template=notify_user_es.html.ftl
 alfviral.notify.admin.template=notify_admin_es.html.ftl
 # process notification asynchronously true|false
